widgets/Drawer/components/DrawerFooter/DrawerFooter.css
@keyframes drawerFooterPanelSmall {

    from {
        grid-template-columns: 32px auto 24px;
        margin-left: 40px;
    }
    to {
        grid-template-columns: 32px;
        width: 32px;
        margin-left: 34px;
    }
}

@keyframes drawerFooterPanelLarge {
    from {
        grid-template-columns: 32px;
        width: 32px;
        margin-left: 34px;
    }

    to {
        grid-template-columns: 32px auto 24px;
        margin-left: 40px;
    }
}

@keyframes drawerFooterWrapperWindowSmall {
    from {
        opacity: 1;
    }

    to {
        opacity: 0;
    }
}

@keyframes drawerFooterWrapperWindowLarge {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}

.drawerClosed .drawerFooterWrapperWindowClosed {
    display:  none !important;

}

.drawerOpen .drawerFooterPanelAnimationOpen {
    animation-name: drawerFooterPanelLarge;
    animation-duration: var(--drawer-animation-duration);
    animation-fill-mode: forwards;
    animation-play-state: running;
}

.drawerClosed .drawerFooterPanelAnimationClose {
    animation-name: drawerFooterPanelSmall;
    animation-duration: var(--drawer-animation-duration);
    animation-fill-mode: forwards;
    animation-play-state: running;
}

.drawerFooterPanelStyle {
    cursor: pointer;
    display: grid;
    padding: 2rem 1.25rem 2rem 1.25rem;
    gap: 1rem;
    align-items: center;
    align-content: baseline;
    grid-template-rows: auto;
    grid-template-columns: max-content minmax(12rem, 20rem) max-content !important;
}

.drawerFooterTitleStyling {
    font-weight: 700;
    font-style: normal;
    font-size: 14px;
    line-height: 17px;
    color: var(--bbj-color-black);
    align-self: center;
}

.drawerFooterTitleStyling .BBjStaticText:empty {
    display: none !important;
}

.drawerFooterSubtitleStyling {
    font-style: normal;
    font-weight: normal;
    font-size: 10px;
    line-height: 14px;
    color: #A1A5A7;
    align-self: end;
    width: 400px
}

.drawerFooterPopUpTextStyle {
    font-weight: 700;
    font-style: normal;
    align-self: center;
    font-size: 14px;
    line-height: 17px;
    color: var(--bbj-color-black);
    margin-left: 20px;
}

.drawerFooterOverlayPanelStyle {
    position: fixed;
    bottom: 99px !important;
    left: 34px !important;
    top: auto !important;
    z-index: 99 !important;
    border-radius: 8px;
    width: 220px;
    background-color: white;
    box-shadow: var(--bbj-shadow-l);
}

.drawerClosed .drawerFooterOverlayClosedPanelStyle {
    padding: 1rem 0;
    bottom: 24px !important;
    left: 90px !important;
}

.footerIcon{
    justify-self: end;
    align-self: center;
}

.drawerFooterOverlayContentWrapper{
    cursor: pointer;
    display: grid;
    grid-template-rows: 50% 50%;
}

.drawerFooterOverlayContentWrapper div.BBjSimpleWindow:last-child{
    margin-bottom: 1em;
}

.drawerFooterOverlayLogoutPanel{
    grid-template-columns: 24px auto;
    display: grid;
}

.drawerFooterOverlayLogout{
    grid-row-start: 2;
    align-self: end;
    cursor: pointer;
}

.drawerFooterOverlayLogoutIcon{
    grid-column-start: 1;
    align-self: center;
    height: 24px;
}

